<resources>
    <string name="app_name">Car Rental Service</string>
    <string name="customer">Customer</string>
    <string name="admin">Admin</string>
    <string name="book_now">Book Now</string>
    <string name="price">Price :</string>
    <string name="year">Year :</string>
    <string name="seats">Seats :</string>
    <string name="color">Color :</string>
    <string name="description">Description :</string>
    <string name="submit">Submit</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="phone">Phone :</string>
    <string name="nrc_id">NRC/ID :</string>
    <string name="address">Address :</string>
    <string name="date">Date :</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="start_date">Start Date :</string>
    <string name="start_time">Start Time :</string>
    <string name="cancel">Cancel</string>
    <string name="car_types">Car Types</string>
    <string name="car_list">Car List</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_new">Add New</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="add_new_car_type">Add new car type</string>
    <string name="edit_car_type">Edit car type</string>
    <string name="car_type">Car Type</string>
    <string name="start_time_title">Start Time</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="price_per_hour">Price (per/hour) :</string>
    <string name="label_car_type">Car Type :</string>
    <string name="label_customer">Customer :</string>
    <string name="calculate">Calculate</string>
    <string name="label_total_duration">Total Duration :</string>
    <string name="label_total_amount">Total Amount :</string>
    <string name="login">Login</string>
    <string name="generate_invoice">Generate Invoice</string>
    <string name="car_rental_invoice">Car Rental Invoice</string>
    <string name="customer_details">Customer Details</string>
    <string name="return_date">Return Date :</string>
    <string name="send_invoice_to_customer">Send invoice to Customer</string>
    <string name="rental_information">Rental Information</string>
    <string name="invoice_no">Invoice No :</string>
</resources>
