<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.BookingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_submit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:text="To rent the car, please complete and submit the booking form."
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                style="@style/FormFieldLayout">

                <TextView
                    style="@style/FormLeftLabel"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/edt_name"
                    style="@style/FormRightField"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                style="@style/FormFieldLayout">

                <TextView
                    style="@style/FormLeftLabel"
                    android:text="@string/nrc_id" />

                <EditText
                    android:id="@+id/edt_id"
                    style="@style/FormRightField"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                style="@style/FormFieldLayout">

                <TextView
                    style="@style/FormLeftLabel"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/edt_email"
                    style="@style/FormRightField"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                style="@style/FormFieldLayout">

                <TextView
                    style="@style/FormLeftLabel"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/edt_phone"
                    style="@style/FormRightField"
                    android:inputType="phone" />

            </LinearLayout>

            <LinearLayout
                style="@style/FormFieldLayout">

                <TextView
                    style="@style/FormLeftLabel"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/edt_address"
                    style="@style/FormRightField"
                    android:inputType="text" />

            </LinearLayout>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:text="@string/choose_gender"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rd_male"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:checked="true"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rd_female"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

            <LinearLayout
                style="@style/FormFieldLayout">

                <TextView
                    style="@style/FormLeftLabel"
                    android:text="@string/start_date" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_start_date"
                    style="@style/FormRightField"
                    android:onClick="openDatePickerDialog"/>

            </LinearLayout>

            <LinearLayout
                style="@style/FormFieldLayout">

                <TextView
                    style="@style/FormLeftLabel"
                    android:text="@string/start_time" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_start_time"
                    style="@style/FormRightField"
                    android:onClick="openTimePickerDialog"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_cancel"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded"
        android:onClick="submitForm"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/cancel"
        android:onClick="cancelBooking"
        android:textAllCaps="false" />

</RelativeLayout>