<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.CheckOutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_car"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_car" />

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_start_time"
                    android:layout_weight="1"
                    android:text="Start Time"
                    android:layout_width="0dp"
                    android:enabled="false"
                    android:background="@drawable/bg_rounded"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="16dp"
                    android:layout_height="0dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_end_time"
                    android:onClick="openDatePickerDialog"
                    android:layout_weight="1"
                    android:text="End Time"
                    android:layout_width="0dp"
                    android:background="@drawable/bg_rounded"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                style="@style/FormFieldLayout">

                <TextView
                    style="@style/FormLeftLabel"
                    android:text="@string/label_customer" />

                <TextView
                    android:id="@+id/tv_customer"
                    style="@style/FormRightField"
                    android:text="Name" />

            </LinearLayout>

            <LinearLayout
                style="@style/FormFieldLayout">

                <TextView
                    style="@style/FormLeftLabel"
                    android:text="@string/label_car_type" />

                <TextView
                    android:id="@+id/tv_car_type"
                    style="@style/FormRightField"
                    android:text="Car Type" />

            </LinearLayout>

            <LinearLayout
                style="@style/FormFieldLayout">

                <TextView
                    style="@style/FormLeftLabel"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/tv_price"
                    style="@style/FormRightField"
                    android:text="Price" />

            </LinearLayout>

            <LinearLayout
                style="@style/FormFieldLayout">

                <TextView
                    style="@style/FormLeftLabel"
                    android:text="@string/year" />

                <TextView
                    android:id="@+id/tv_year"
                    style="@style/FormRightField"
                    android:text="Year" />

            </LinearLayout>

            <LinearLayout
                style="@style/FormFieldLayout">

                <TextView
                    style="@style/FormLeftLabel"
                    android:text="@string/seats" />

                <TextView
                    android:id="@+id/tv_seats"
                    style="@style/FormRightField"
                    android:text="Seat" />

            </LinearLayout>

            <LinearLayout
                style="@style/FormFieldLayout">

                <TextView
                    style="@style/FormLeftLabel"
                    android:text="@string/color" />

                <TextView
                    android:id="@+id/tv_color"
                    style="@style/FormRightField"
                    android:text="Color" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:text="@string/calculate"
        android:onClick="openCalculateAndReturnDialog"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:background="@drawable/bg_rounded"
        android:layout_height="wrap_content" />

</LinearLayout>